force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/vlocity_ins__ProviderNetwork__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Provider Network</relationshipLabel>
    <relationshipName>Provider_Network</relationshipName>
    <type>Lookup</type>
</CustomField>