force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/vlocity_ins__ProviderNetwork__c/fields/ProviderNetworkTier__c.field-meta.xml
<CustomField>
    <fullName>ProviderNetworkTier__c</fullName>
    <label>Provider Network Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>