force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>