force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/vlocity_ins__ProviderNetwork__c/fields/vlocity_ins__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>