force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/vlocity_ins__ProviderNetwork__c/recordTypes/vlocity_ins__Provider.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Provider</fullName>
    <active>true</active>
    <label>Provider</label>
</RecordType>